--- a/Objects/MyHAL.build_log.htm
+++ b/Objects/MyHAL.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.25.2.0
 Dialog DLL:      DCM.DLL V1.17.1.0
-Target DLL:      UL2CM3.DLL V1.160.12.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
@@ -27,19 +27,24 @@ Project File Date:  07/13/2022
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target_test'
-compiling test_MyRCC_runner.c...
-compiling test_MyRCC.c...
-compiling MyRCC.c...
-assembling startup_stm32f407xx.s...
-compiling test_MyGPIO_runner.c...
-compiling unity.c...
 compiling test_MyGPIO.c...
-test\test_MyGPIO.c(47): error:  #35: #error directive: gundi
-      #error gundi
-test\test_MyGPIO.c: 0 warnings, 1 error
-compiling system_stm32f4xx.c...
+compiling test_MyGPIO_runner.c...
+compiling MyRCC.c...
+compiling test_MyRCC_runner.c...
+compiling unity.c...
+assembling startup_stm32f407xx.s...
 compiling MyGPIO.c...
-".\Objects\MyHAL.axf" - 1 Error(s), 0 Warning(s).
+compiling system_stm32f4xx.c...
+compiling retarget.c...
+compiling test_MyRCC.c...
+test\test_MyRCC.c(14): warning:  #167-D: argument of type "volatile uint32_t *" is incompatible with parameter of type "void *"
+     memset(&(RCC->AHB1ENR), 0, sizeof (RCC->AHB1ENR));
+test\test_MyRCC.c(19): warning:  #167-D: argument of type "volatile uint32_t *" is incompatible with parameter of type "void *"
+     memset(&(RCC->AHB1ENR), 0, sizeof (RCC->AHB1ENR));
+test\test_MyRCC.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=2196 RO-data=996 RW-data=20 ZI-data=1836  
+".\Objects\MyHAL.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -66,11 +71,10 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:2.6.3
       Source file:   MDK\Device\Source\ARM\STM32F40xxx_41xxx_OPT.s
+      Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f407xx.s
       Source file:   MDK\Device\Source\ARM\STM32F4xx_OTP.s
-      Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
-Target not created.
 Build Time Elapsed:  00:00:03
 </pre>
 </body>
